--- a/style.css
+++ b/style.css
@@ -1,73 +1,33 @@
-/* #D1{
-    border: 4px solid red;
-    background-color: deeppink;
-    display: inline;
-}
+#H1{
+    text-align: center;
+    border: black 2px solid;
+    height: 50px;
+    margin-bottom: 20px;
 
-#D2{
-    border: 3px solid black;
-    background-color: blue;
-    display: inline;
+}
+table {
+    width: 87pc;
+    margin: 0 auto;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    
+}
+table, th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+    
+}
+/* th {
+    background-color: #f2f2f2;
 } */
-
 body{
-    background-color: green;
+    border: solid black 2px;
 }
-
-img{
-    height: 200px;
+#Buttn{
+    width: 80px;
+    background-color: grey;
+    color: aliceblue;
    
-    position:relative;
-    /* top: 0; */
-    left: 50%;
-    transform: translateX(-50%);  
-}
-#D1{
-    background-color: Yellow;
-    color: darkblue;
-    height: 300px;
-    font-size: 30px;   
-}
-#D2{
-    background-color: white;
-    margin-top: 30px;
-    height: 450px;
-    
-   
-}
-iframe{
-    position:relative;
-    top: 16px;
-    left: 50%;
-    transform: translateX(-50%); 
-
-}
-a{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    top: 30px;
-    font-size: 50px;
-    text-decoration: none;
-
-    /* transform: translateX(-50%);  */
-  
-  
-} 
-
-#D3{
-    background-color:#242e40;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-
-    
-    
     
 }
-
- 
-  
-
-
-
